--- a/codegraph_web/src/components/graphCanvas.css
+++ b/codegraph_web/src/components/graphCanvas.css
@@ -1,7 +1,7 @@
 .codegraph-canvas {
+  flex: 1;
   width: 100%;
-  height: 100%;
-  min-height: 16rem;
+  min-height: 12rem;
 }
 
 .codegraph-node {
